add grid and sound buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		border: 2px solid black;
 		display: none;
 	}
-	#startButton, #muteButton, #snakeButton {
+	#startButton, #muteButton, #snakeButton, #gridButton, #soundButton {
 		position: absolute;
 		padding: 20px;
 		font-size: 24px;
@@ -27,6 +27,14 @@
 		top: 90px;
 		right: 10px;
 		background-color: #F091AD;
+	}
+	#gridButton {
+		top: 170px;
+		right: 10px;
+	}
+	#soundButton {
+		top: 250px;
+		right: 10px;
 	}
 	#title {
 		text-align: center;
@@ -86,6 +94,8 @@
     </div>
     <button id="muteButton">Mute</button>
     <button id="snakeButton">Worm</button>
+	<button id="gridButton">Lines On</button>
+	<button id="soundButton">Sounds 1</button>
     <footer>
         <div id="footerText">Made for the legion by
             <font color="purple">undank</font>
