--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	<button id="soundButton">Sounds 1</button>
 	<button id="recipeButton">Subway</button>
 	<div id="dialog">
-		<h2>Perfect Subway Sandwich Recipe</h2>
+		<h2>Perfect Subway Sandwich Recipe by Nemz38</h2>
 		<p> 
 			- Italian Bread (Hearty if you want I don't because I don't want seeds I'm not gay)<br>
 			- Turkey Breast<br>
